@@ -11,6 +11,7 @@ import static org.pmiops.workbench.cloudtasks.TaskQueueService.AUDIT_PROJECTS;
 
 import com.google.cloud.tasks.v2.CloudTasksClient;
 import com.google.cloud.tasks.v2.Task;
+import com.google.common.base.Stopwatch;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
@@ -18,7 +19,6 @@ import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.pmiops.workbench.FakeClockConfiguration;
@@ -53,8 +53,9 @@ public class OfflineUserControllerTest {
   @Import({
     FakeClockConfiguration.class,
     OfflineUserController.class,
+    Stopwatch.class,
     TaskQueueService.class,
-    WorkbenchLocationConfigService.class
+    WorkbenchLocationConfigService.class,
   })
   @MockBean({CloudTasksClient.class, UserService.class})
   static class Configuration {
@@ -70,11 +71,11 @@ public class OfflineUserControllerTest {
   public void setUp() {
     incrementedUserId = 1L;
     List<DbUser> users = createUsers();
-    List<Long> userIds = users.stream().map(DbUser::getUserId).collect(Collectors.toList());
-    when(mockUserService.getAllUsersExcludingDisabled()).thenReturn(users);
-    when(mockUserService.getAllUsers()).thenReturn(users);
-    when(mockUserService.getAllUsersWithActiveInitialCredits()).thenReturn(users);
+    List<Long> userIds = users.stream().map(DbUser::getUserId).toList();
     when(mockUserService.getAllUserIds()).thenReturn(userIds);
+    when(mockUserService.getAllUserIdsWithActiveInitialCredits()).thenReturn(userIds);
+    when(mockUserService.getAllUserIdsWithCurrentTierAccess()).thenReturn(userIds);
+    when(mockUserService.getAllUsers()).thenReturn(users);
     when(mockCloudTasksClient.createTask(anyString(), any(Task.class)))
         .thenReturn(Task.newBuilder().setName("name").build());
 
